@@ -14,6 +14,7 @@
 	* CORE: Fixed bug with ISNULL and ISNOTNULL which weren't working with serializable.  Thanks to andrew8er.  Bug #185.
 	* CORE: Fixed bug with dao.update() not setting the dao on BaseDaoEnabled instances. Thanks to Carlos Fonseca. Bug #177.
 	* CORE: Added DataType.BOOLEAN_CHAR (to support '1' '0' or 't' 'f') and BOOLEAN_INTEGER.  Thanks to stew.
+	* CORE: Fixed bug where dao.deleteById(...) was not being properly notified. Thanks to DanielJette. Bug #190.
 	* JDBC: Possibly fixed some problems with the Oracle type with better boolean support.  Thanks to 51mon.
 	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
 	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!
